--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ body {
         var(--color-background-l)
     );
     background-size: cover;
+    background-position: center;
     color: hsl(
         var(--color-primary-h),
         var(--color-primary-s),
