--- a/css/style.css
+++ b/css/style.css
@@ -337,9 +337,10 @@ body {
 }
 
 .settings-options .settings-form-header {
-    margin-bottom: 1rem;
-    font-size: 1rem;
-    font-weight: bold;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.1rem;
+    font-weight: 500;
 }
 
 .settings-options .settings-form {
@@ -350,8 +351,8 @@ body {
         0.25
     );
     padding: 1rem 1rem 0 1rem;
-    margin-bottom: 1rem;
-    border-radius: 1rem;
+    margin-bottom: 2rem;
+    border-radius: 0.5rem;
 }
 
 .settings-options .settings-form .setting {
